# jexl-go

./: .gitignore  LICENSE  Makefile  README.md  go.mod  jexl.go  jexl_test.go  main.go
lib/: jexl.h
lib/jexl-ffi/: Cargo.toml
lib/jexl-ffi/src/: lib.rs
